--- a/css/main.css
+++ b/css/main.css
@@ -97,8 +97,6 @@ footer {
   justify-content: center;
 }
 
-/***** HEADER STYLES *****/
-
 header .content-wrapper { 
   align-items: center;
   display: flex;
@@ -119,14 +117,28 @@ header nav ul {
   justify-content: space-around;
 }
 
+footer .social-icons{ 
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+}
+
+footer p {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 /***** BODY STYLES *****/ 
 
+/* HERO */
 .hero-area {
   align-items: center;
   display: flex;
   justify-content: center;
 }
 
+/* ASIDE */
 aside {
   align-items: center;
   display: flex;
@@ -134,6 +146,7 @@ aside {
   justify-content: center;
 }
 
+/* FEATURES */
 .features {
   align-items: center;
   display: flex;
@@ -147,6 +160,7 @@ aside {
   justify-content: center;
 }
 
+/* REVIEWS */
 .reviews {
   align-items: center;
   display: flex;
@@ -154,18 +168,7 @@ aside {
   justify-content: center;
 }
 
-footer.social-icons {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-footer .social p {
-  align-items: center;
-  display: flex;
-  justify-content: space-around;
-}
-
+/* MISSION */
 .mission {
   align-items: center;
   display: flex;
@@ -173,6 +176,7 @@ footer .social p {
   justify-content: center;
 }
 
+/* CONTACT */
 .contact-section {
   align-items: center;
   display: flex;
@@ -180,6 +184,7 @@ footer .social p {
   justify-content: center;
 }
 
+/* FAQ */
 .faq {
   align-items: center;
   display: flex;
