--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,59 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/***** GENERAL STYLES *****/
+
+html { 
+  font-size: 16px;
+}
+
+body { 
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em; 
+  text-align: left;
+/*! text-align:left because of the flexible nature of the divs? */
+}
+
+ul,
+ol { 
+  list-style-type: none;
+}
+
+a { 
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 { 
+  font-family: 'Poppins', sans-serif;
+  font-size: 2em;
+}
+
+h3, 
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.13em;
+  line-height: 1.5em;
+  margin: 20px 0;
+}
+
+p { 
+  font-size: 1em;
+  line-height: 1.25em;
+}
+
+img { 
+
+}
+
+figure { 
+
+}
+
+address { 
+  font-style: normal;
+}
+
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
@@ -178,6 +231,11 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.hero-area h1 { 
+  font-size: 'Poppins', sans-serif;
+  font-size: 2.25em;
 }
 
 /* ASIDE */
