--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ html {
 }
 
 body { 
+  color: #e2e3ed;
   font-family: 'Open Sans', sans-serif;
   font-size: 1em; 
   text-align: left;
@@ -113,13 +114,14 @@ a {
 h2 { 
   font-family: 'Poppins', sans-serif;
   font-size: 2em;
+  font-weight: 500;
 }
 
 h3, 
 h4 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.13em;
-  line-height: 1.5em;
+  font-size: 2em;
+  font-weight: 500;
   margin: 20px 0;
 }
 
@@ -129,11 +131,13 @@ p {
 }
 
 img { 
+  border-style: none;
+  vertical-align: middle;
   width: 100%;
 }
 
 figure { 
-
+  margin: 0;
 }
 
 address { 
@@ -149,6 +153,7 @@ address {
 header, 
 footer {
   align-items: center;
+  background-color: #202322;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -167,29 +172,46 @@ header .content-wrapper {
 }
 
 .header-divider {
-  width: 100%;
+  background: #3a3a3a; 
   height: 1px;
-  padding: 10px 0 20px 0;
+  width: 100%;
+}
+
+.header figure {
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 header nav {
   align-items: center;
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  font-size: 1.125em;
+  font-weight: 700;
+  justify-content: space-around;
+  text-transform: uppercase;
   width: 60%;
 }
 
 header nav ul {
-  align-items: center;
   display: flex;
-  justify-content: space-around; 
-  margin: 10px 0;
+  justify-content: space-between; 
   width: 100%;
+}
+
+header nav ul li {
+  font-size: 1.13em;
 }
 
 footer {
   flex-direction: column;
+  text-align: center;
+}
+
+footer .contact { 
+  margin-bottom: 50px;
 }
 
 footer content { 
@@ -228,9 +250,12 @@ footer .social-icons p {
 
 /* HERO */
 .hero-area {
+  background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat #333;
+  background-size: cover;
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
+  flex-flow: row wrap; 
+  min-height: 500px;
 }
 
 .hero-area h1 { 
@@ -243,6 +268,7 @@ footer .social-icons p {
 
 /* ASIDE */
 aside {
+  background-color: #527158;
   align-items: center;
   display: flex;
   flex-flow: row wrap;
@@ -250,10 +276,14 @@ aside {
 }
 
 aside .form { 
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
-input [type=text] { 
+aside .form-description h3 { 
+  padding-top: 10px;
+}
+
+input[type=text] { 
   box-sizing: border-box;
   color: #2a423a;
   font-style: italic;
@@ -261,7 +291,7 @@ input [type=text] {
   width: 100%;
 }
 
-input [type=button] {
+input[type=button] {
   background-color: #2a423a;
   border: none;
   color: #e2e3ed;
@@ -277,13 +307,15 @@ input [type=button] {
 
 /* FEATURES */
 .features {
+  background: url('../img/rawpixel-800820-unsplash1.jpg') center no-repeat;
+  background-size: cover;
   display: flex;
   flex-flow: row wrap;
-  justify-content: center; 
+  justify-content: center;
 }
 
 .features article { 
-  width: 75%;
+  width: 63%;
   margin: 30px 0;
 }
 
@@ -300,10 +332,12 @@ input [type=button] {
 
 .features p {
   margin: 0; 
+  text-align: center;
 }
 
 /* REVIEWS */
 .reviews {
+  background-color: #2a423a;
   display: flex;
   flex-flow: row wrap;
   justify-content: center; 
@@ -324,6 +358,7 @@ input [type=button] {
 /* MISSION */
 .mission {
   align-items: center;
+  background-color: #527158;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -331,6 +366,7 @@ input [type=button] {
 
 /* CONTACT */
 .contact-section {
+  background-color: #2a423a;
   align-items: center;
   display: flex;
   flex-flow: row wrap;
@@ -345,6 +381,7 @@ input [type=button] {
 /* FAQ */
 .faq {
   align-items: center;
+  background-color: #527158;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
