--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ a {
 
 h2 { 
   font-family: 'Poppins', sans-serif;
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: 500;
 }
 
@@ -126,13 +126,11 @@ h4 {
 }
 
 p { 
-  font-size: 1em;
+  font-size: .9em;
   line-height: 1.25em;
 }
 
 img { 
-  border-style: none;
-  vertical-align: middle;
   width: 100%;
 }
 
@@ -182,6 +180,7 @@ header .content-wrapper {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  width: 60%;
 }
 
 header nav {
@@ -250,7 +249,7 @@ footer .social-icons p {
 
 /* HERO */
 .hero-area {
-  background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat #333;
+  background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -314,6 +313,7 @@ input[type=button] {
   justify-content: center;
 }
 
+
 .features article { 
   width: 63%;
   margin: 30px 0;
@@ -324,10 +324,12 @@ input[type=button] {
   display: flex;
   flex-flow: row wrap;
   justify-content: center; 
+  width: 55%;
 }
 
 .features h2 {
-  margin-bottom: 60px;
+  font-size: 2em;
+  margin-bottom: 40px;
 }
 
 .features p {
@@ -343,15 +345,32 @@ input[type=button] {
   justify-content: center; 
 }
 
+.reviews figure { 
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  width: 50%;
+}
+
 .reviews h2 { 
-  margin-bottom: 30px; 
+  font-size: 2.2em;
   line-height: 1.25em;
+  margin-bottom: 30px;
+  padding-left: 5px; 
 }
 
 .reviews h3 { 
-  line-height: 1.333em;
-  padding: 20px 0 20px 10px;
-  width: 55%; 
+  font-size: 1.8em;
+  line-height: 1.5em;
+  padding: 20px 0;
+  padding-left: 15px;
+  width: 60%; 
+}
+
+.reviews p {
+  font-size: 1em;
+  padding-left: 15px;
 }
 
 /*========== About Page ==========*/
@@ -362,6 +381,23 @@ input[type=button] {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+}
+
+/* MAP */
+.map figure {
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 75%;
+  position: relative;
+  width: 100%;
+}
+
+.map iframe { 
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 /* CONTACT */
