Added tablet and desktop CSS styles for about page map to make it responsive

--- a/css/main.css
+++ b/css/main.css
@@ -389,7 +389,7 @@ input[type=button] {
   overflow: hidden;
   padding-bottom: 75%;
   position: relative;
-  width: 100%;
+  max-width: 100%;
 }
 
 .map iframe { 
@@ -646,6 +646,10 @@ input[type=button] {
     width: 45%;
   }
 
+  .map figure {
+    padding-bottom: 45.5%;
+  }
+
   .contact-section .content-wrapper h2 { 
     width: 80%;
   }
@@ -726,6 +730,10 @@ input[type=button] {
   .mission h2,
   .contact-section .content-wrapper h2 { 
     width: 100%;
+  }
+
+  .map figure {
+    padding-bottom: 37.5%;
   }
 
   /*-------------------- FAQ PAGE --------------------*/
