Added necessary responsive styles for Tablet and Desktop screens; with some desktop layout issues to fix

--- a/css/main.css
+++ b/css/main.css
@@ -547,6 +547,17 @@ input[type=button] {
     max-width: 640px;
     margin: 100px 0;
   }
+
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+      font-size: 1.5em;
+      line-height: 1.25;
+  }
+
   /*-------------------- HOME PAGE --------------------*/
 
   /***** HEADER STYLES *****/
@@ -561,6 +572,10 @@ input[type=button] {
     width: 100%;
   }
 
+  header figure {
+    width: 30%;
+  }
+
   header nav { 
     width: 20%;
   }
@@ -571,11 +586,19 @@ input[type=button] {
 
   .header-divider { 
     display: none;
-  /* ! why 'none' instead of 'flex'?*/
   }
 
   /* HERO */
-
+  
+  .hero-area {
+    min-height: 600px;
+  }
+  
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+}
   /* ASIDE */
 
   aside .content-wrapper { 
@@ -602,8 +625,16 @@ input[type=button] {
     padding: 0 10px;
   }
 
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features .feature-items-description { 
     width: 50%;
+  }
+
+  .features i {
+    margin-bottom: 30px;
   }
 
   /* REVIEWS */
@@ -613,8 +644,14 @@ input[type=button] {
     justify-content: space-between;
   }
 
+  .reviews article figure,
   .reviews article div { 
     width: 50%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
   }
 
   /* FOOTER */
@@ -632,6 +669,20 @@ input[type=button] {
 
   footer .contact { 
     margin-bottom: 0;
+  }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+      line-height: 1.285;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   footer .copywright { 
@@ -667,6 +718,10 @@ input[type=button] {
     justify-content: space-between; 
   }
 
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
   /*-------------------- FAQ PAGE --------------------*/
 
   .faq .content-wrapper { 
@@ -682,21 +737,50 @@ input[type=button] {
     width: 100%;
   /* ! why 100% vs 80% of contact-section content-wrapper h2? */
   }
+
+  .faq h4,
+  .faq p {
+      font-size: .875em;
+      line-height: 1.125;
+  }
+}
 }
 
 @media only screen and (min-width:1200px) {
 
   /* !!!! DESKTOP STYLES !!! */
 
+  header {
+    padding: 15px 0;
+  }
+
+  header nav ul { 
+    justify-content: space-between;
+  }
+
   .content-wrapper {
-    margin: 100px 0;
-    max-width: 1000px;
+    max-width: 960px;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+      font-size: 1.875em;
+  }
+
+  p {
+      font-size: 1.125em;
+      line-height: 1.333;
   }
     /*-------------------- HOME PAGE --------------------*/
 
   /* HERO */
 
   .hero-area h1 { 
+    font-size: 3.75em;
     width: 80%;
   }
 
@@ -710,6 +794,10 @@ input[type=button] {
   aside .content-wrapper form {
     width: 45%;
     margin: 0;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /* FEATURES */
@@ -729,6 +817,10 @@ input[type=button] {
   /* ! why include this porperty when the value is the same? */
   }
 
+  .reviews h2 {
+    padding-bottom: 50px; 
+  }
+
   .reviews figure { 
     align-items: center;
     display: flex;
@@ -738,6 +830,11 @@ input[type=button] {
   }
 
   /* FOOTER */
+
+  footer h4 {
+    font-size: 1.875em;
+  }
+
 
   /*-------------------- ABOUT PAGE --------------------*/
 
@@ -750,11 +847,22 @@ input[type=button] {
     padding-bottom: 37.5%;
   }
 
+  .contact-content h4 {
+    font-size: 1.875em;
+  }
+
   /*-------------------- FAQ PAGE --------------------*/
 
   .faq h2 { 
+    font-size: 3em;
     width: 100%;
   /* ! why include this porperty when the value is the same? */
+  }
+
+  .faq h4,
+  .faq p {
+      font-size: 1.125em;
+      line-height: 1;
   }
 }
 
