--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,7 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: space-between; 
+  padding-right: 40px;
   width: 100%;
 }
 
@@ -545,7 +546,7 @@ input[type=button] {
   /***** GENERAL STYLES *****/
   .content-wrapper { 
     max-width: 640px;
-    margin: 100px 0;
+    margin: 75px 0;
   }
 
   h2 {
@@ -577,10 +578,10 @@ input[type=button] {
   }
 
   header nav { 
-    width: 20%;
+    width: 40%;
   }
 
-  header nav ul { 
+  header nav ul li { 
     justify-content: space-between;
   }
 
@@ -609,9 +610,14 @@ input[type=button] {
   }
 
   aside .content-wrapper .form-description, 
-  aside .content-wrapper form {
-    width: 40%;
+  aside .content-wrapper .form {
+    width: 45%;
     margin: 0;
+  } 
+
+  aside .form h3 { 
+    margin: 15px 0;
+    padding: 10px 0;
   }
 
   /* FEATURES */
@@ -620,21 +626,25 @@ input[type=button] {
     align-items: center;
     display: flex; 
     flex-basis: 50%;
-    flex-flow: column wrap;
-    justify-content: center;
-    padding: 0 10px;
-  }
+    flex-flow: row wrap;
+    justify-content: space-around; 
+   }
 
-  .features h2 {
-    margin-bottom: 20px;
+  .features .content-wrapper h2 {
+    margin: 20px;
   }
 
   .features .feature-items-description { 
-    width: 50%;
+    width: 60%;
   }
 
   .features i {
-    margin-bottom: 30px;
+    margin-bottom: 30px; 
+  }
+
+  .features .feature-items { 
+    font-size: ;
+    width: 65%;
   }
 
   /* REVIEWS */
@@ -649,9 +659,20 @@ input[type=button] {
     width: 50%;
   }
 
+  .reviews h2 {
+    width: 75%;
+  }
+
   .reviews h3 {
+    font-size: 1.5em; 
+    padding: 10px;
+    padding-left: 15px;
     width: 75%;
     margin: 0;
+  }
+
+  .reviews p { 
+    font-size: .8em;
   }
 
   /* FOOTER */
