--- a/css/main.css
+++ b/css/main.css
@@ -559,8 +559,6 @@ input[type=button] {
       line-height: 1.25;
   }
 
-  /*-------------------- HOME PAGE --------------------*/
-
   /***** HEADER STYLES *****/
 
   header { 
@@ -588,6 +586,8 @@ input[type=button] {
   .header-divider { 
     display: none;
   }
+
+  /*-------------------- HOME PAGE --------------------*/
 
   /* HERO */
   
@@ -712,22 +712,30 @@ input[type=button] {
 
   /*-------------------- ABOUT PAGE --------------------*/
 
+  /* mission */
   .mission-content { 
     align-items: center;
     display: flex; 
-    justify-content: space-between; 
+    flex-flow: row wrap; 
     padding-top: 20px;
   /* ! why padding top? */
   }
 
   .mission-content p {
+    margin: 10px;
     width: 45%;
   }
 
+  .mission h1 { 
+    margin-top: 10px;
+  }
+
+  /* map */
   .map figure {
     padding-bottom: 45.5%;
   }
 
+  /* contact */
   .contact-section .content-wrapper h2 { 
     width: 80%;
   }
@@ -739,6 +747,12 @@ input[type=button] {
     justify-content: space-between; 
   }
 
+  .contact-section .content-wrapper h3, 
+  .contact-section .content-wrapper .address {
+    width: 45%;
+  }
+
+  /* footer */
   .contact-content h4 {
     font-size: 1.5em;
   }
@@ -746,7 +760,8 @@ input[type=button] {
   /*-------------------- FAQ PAGE --------------------*/
 
   .faq .content-wrapper { 
-    justify-content: space-between;
+    justify-content: space-between; 
+    margin: 60px;
   }
 
   .faq-content { 
@@ -755,6 +770,7 @@ input[type=button] {
   }
 
   .faq h2 { 
+    margin-bottom: 25px;
     width: 100%;
   /* ! why 100% vs 80% of contact-section content-wrapper h2? */
   }
@@ -763,6 +779,10 @@ input[type=button] {
   .faq p {
       font-size: .875em;
       line-height: 1.125;
+  }
+
+  .faq h4 { 
+    margin-bottom: 15px;
   }
 }
 }
