--- a/css/main.css
+++ b/css/main.css
@@ -780,16 +780,12 @@ input[type=button] {
     margin-bottom: 15px;
   }
 }
-}
 
 @media only screen and (min-width: 1200px) {
 
   /* !!!! DESKTOP STYLES !!! */
 
     /***** GENERAL STYLES *****/
-  header {
-    padding: 15px 0;
-  }
 
   .content-wrapper {
     max-width: 960px;
@@ -813,8 +809,8 @@ input[type=button] {
   /* HERO */
 
   .hero-area h1 { 
-    font-size: 3.75em;
-    width: 80%;
+    font-size: 3.5em;
+    width: 90%;
   }
 
   /* ASIDE */
@@ -825,7 +821,7 @@ input[type=button] {
 
   aside .content-wrapper .form-description, 
   aside .content-wrapper form {
-    width: 20%;
+    width: 45%;
     margin: 0;
   }
 
@@ -836,12 +832,12 @@ input[type=button] {
   /* FEATURES */
 
   .features article {
-    width: 30%; 
+    flex-basis: 33%; 
   }
 
 
   .features h2 { 
-    width: 70%;
+    width: 90%;
   }
 
   /* REVIEWS */
@@ -851,19 +847,15 @@ input[type=button] {
   /* ! why include this porperty when the value is the same? */
   }
 
-  .reviews h2 {
-    padding-bottom: 50px; 
-    padding-left: 0px;
-    width: 750px; 
+  .reviews .content-wrapper { 
+    margin-top: 60px;
   }
 
-  .reviews figure { 
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
-    width: 50%;
+  .reviews h2 {
+    margin-bottom: 50px;
   }
+
+ 
 
   /* FOOTER */
 
@@ -874,13 +866,31 @@ input[type=button] {
 
   /*-------------------- ABOUT PAGE --------------------*/
 
-  .mission h2,
-  .contact-section .content-wrapper h2 { 
-    width: 100%;
+  .mission .content-wrapper { 
+    margin: 75px 0;
+  }
+
+  .mission h1{ 
+    font-size: 3.25em;
+    font-weight: 500;
+  }
+
+
+  .mission h1,
+  .contact-section .content-wrapper { 
+    width: 95%;
+  }
+
+  .mission-content {
+    align-items: flex-start;
   }
 
   .map figure {
     padding-bottom: 37.5%;
+  }
+
+  .contact-section .content-wrapper { 
+    
   }
 
   .footer-content h4 {
